submarine-cloud-v3/artifacts/submarine-agent.yaml
#
# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "submarine-agent"
spec:
  selector:
    matchLabels:
      app: "submarine-agent"
  replicas: 1
  template:
    metadata:
      labels:
        app: "submarine-agent"
    spec:
      serviceAccountName: "submarine-server"
      containers:
      - name: "submarine-server"
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10
          failureThreshold: 3
          periodSeconds: 10
        image: "apache/submarine:agent-0.9.0-SNAPSHOT"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
