submarine-cloud-v3/artifacts/submarine-mlflow.yaml
#
# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

---
apiVersion: v1
kind: Service
metadata:
  name: submarine-mlflow-service
spec:
  type: ClusterIP
  selector:
    app: submarine-mlflow
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
    name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: submarine-mlflow
spec:
  selector:
    matchLabels:
      app: submarine-mlflow
  replicas: 1
  template:
    metadata:
      labels:
        app: submarine-mlflow
    spec:
      serviceAccountName: "submarine-storage"
      containers:
      - name: submarine-mlflow-container
        image: apache/submarine:mlflow-0.9.0-SNAPSHOT
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
        volumeMounts:
          - mountPath: "/logs"
            name: "volume"
            subPath: "submarine-mlflow"
        readinessProbe:
          tcpSocket:
            port: 5000
          initialDelaySeconds: 60
          periodSeconds: 10
      volumes:
        - name: "volume"
          persistentVolumeClaim:
            claimName: "submarine-mlflow-pvc"
        - name: mc-config-vol
          emptyDir: {}
