submarine-cloud-v3/artifacts/submarine-server.yaml
#
# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

---
apiVersion: v1
kind: Service
metadata:
  name: "submarine-server"
  labels:
    app: "submarine-server"
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: "submarine-server"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "submarine-server"
spec:
  selector:
    matchLabels:
      app: "submarine-server"
  replicas: 1
  template:
    metadata:
      labels:
        app: "submarine-server"
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      serviceAccountName: "submarine-server"
      volumes:
        - name: mc-config-vol
          emptyDir: { }
      containers:
      - name: "submarine-server"
        image: "apache/submarine:server-0.8.0-SNAPSHOT"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
