submarine-cloud-v3/artifacts/submarine-tensorboard.yaml
#
# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

---
apiVersion: v1
kind: Service
metadata:
  name: submarine-tensorboard-service
  labels:
    app.kubernetes.io/name: submarine-tensorboard
    app.kubernetes.io/version: "0.8.0-SNAPSHOT"
    app.kubernetes.io/component: tensorboard
spec:
  selector:
    app: submarine-tensorboard
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 6006
      name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: submarine-tensorboard
  labels:
    app.kubernetes.io/name: submarine-tensorboard
    app.kubernetes.io/version: "0.8.0-SNAPSHOT"
    app.kubernetes.io/component: tensorboard
spec:
  selector:
    matchLabels:
      app: submarine-tensorboard
  template:
    metadata:
      labels:
        app: submarine-tensorboard
    spec:
      serviceAccountName: "submarine-storage"
      containers:
        - name: submarine-tensorboard-container
          image: tensorflow/tensorflow:1.11.0
          command:
            - "tensorboard"
            - "--logdir=/logs"
            - "--path_prefix=/tensorboard"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6006
          volumeMounts:
            - mountPath: "/logs"
              name: "volume"
              subPath: "submarine-tensorboard"
          readinessProbe:
            tcpSocket:
              port: 6006
            periodSeconds: 10
      volumes:
        - name: "volume"
          persistentVolumeClaim:
            claimName: "submarine-tensorboard-pvc"
