submarine-cloud-v3/artifacts/submarine-virtualservice.yaml
#
# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: submarine-virtual-service
spec:
  hosts:
    - "*"
  gateways:
    - submarine-cloud-v3-system/submarine-gateway
  http:
    - match:
        - uri:
            prefix: /tensorboard
      route:
        - destination:
            host: submarine-tensorboard-service
            port:
              number: 8080
    - match:
        - uri:
            prefix: /mlflow
      route:
        - destination:
            host: submarine-mlflow-service
            port:
              number: 5000
    - match:
        - uri:
            prefix: /minio
      route:
        - destination:
            host: submarine-minio-service
            port:
              number: 9000
    - route:
        - destination:
            host: submarine-server
            port:
              number: 8080
